service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dolly-service
spec:
  selector:
    app: dolly-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
